﻿ShareX 8.0.0.463 - 2013-08-12

Ability to create custom hotkeys with task settings
Unlimited screen recorder support
Commandline support for screen recorder
Added auto capture support
Capture selected monitor screen
Windows 7 taskbar support
Ability to change settings folder

ShareX 7.0.0.350 - 2013-04-05

Added modified version of Greenshot image editor (After capture -> Annotate Image)
Imgur, Google URL Shortener and Picasa using OAuth 2.0 now (You need to re-authorize)
Added Imgur album support
Added Google Drive uploader
Fixed Flickr upload issue
Updated to use Twitter 1.1 API
Fixed Possible crash with non existent program paths
Simplified Proxy handling behavior. No need to manually enter proxy host as the program will automatically retrieve it from the system proxy.
Added "Send URL with email" After upload task
Issues with DST time fixed

ShareX 6.7.0.311 - 2013-03-19

Issues with arguments and custom uploaders fixed
Fixed screen capture issues with Custom DPI settings
POST file support for custom text uploader
Shows cursor only if its visible
Added Hash Check Tool
Added localhostr.com support

ShareX 6.6.2.293 - 2013-02-01

Fixed errors with screen recording
Added Name Formatting support for custom uploaders
Fixed errors with updater
Remembers file upload directory
Goo.gl shortener fix
Fixed issues with slow FTP uploads

ShareX 6.6.1.283 - 2013-01-21

Reverted minimum system requirements to .NET 3.5 to support Windows XP

ShareX 6.6.0.280 - 2013-01-20

Added Screenshot delay setting
Added Clipboard upload settings tab
Fixed bug related to clipboard copy
Additional directory checks before saving screenshot
Added custom uploader support for all data types (image, text, file, url shortener)
Added Screen Recording with GIF/AVI output
Minimum system requirements updated to .NET 4.5

ShareX 6.5.0.248 - 2012-09-19

Use Delete key to remove items from main window
Added "Post capture tasks" window
Long file name error while capturing Active Window fixed